<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".terms">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp">
            <TextView
                android:id="@+id/tv_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms1"
                android:layout_marginTop="@dimen/_20sdp"
                android:textSize="@dimen/_18ssp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_msg1"
                android:layout_below="@+id/tv_title1"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_terms1"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/tv_title2"
                android:layout_below="@+id/tv_msg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="@string/terms2"
                android:textSize="@dimen/_18ssp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_msg2"
                android:layout_below="@+id/tv_title2"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_terms2"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/tv_title3"
                android:layout_below="@+id/tv_msg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_7sdp"
                android:text="@string/terms3"
                android:textSize="@dimen/_18ssp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_msg3"
                android:layout_below="@+id/tv_title3"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_terms3"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/tv_title4"
                android:layout_below="@+id/tv_msg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms4"
                android:layout_marginTop="@dimen/_7sdp"
                android:textSize="@dimen/_18ssp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_msg4"
                android:layout_below="@+id/tv_title4"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_terms4"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/tv_title5"
                android:layout_below="@+id/tv_msg4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms5"
                android:layout_marginTop="@dimen/_7sdp"
                android:textSize="@dimen/_18ssp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_msg5"
                android:layout_below="@+id/tv_title5"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_terms5"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/tv_title6"
                android:layout_below="@+id/tv_msg5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms6"
                android:layout_marginTop="@dimen/_7sdp"
                android:textSize="@dimen/_18ssp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_msg6"
                android:layout_below="@+id/tv_title6"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_terms6"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/tv_title7"
                android:layout_below="@+id/tv_msg6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms7"
                android:textSize="@dimen/_18ssp"
                android:layout_marginTop="@dimen/_7sdp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_msg7"
                android:layout_below="@+id/tv_title7"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_terms7"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/tv_title8"
                android:layout_below="@+id/tv_msg7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms8"
                android:layout_marginTop="@dimen/_7sdp"
                android:textSize="@dimen/_18ssp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_msg8"
                android:layout_below="@+id/tv_title8"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ans_terms8"
                android:textSize="@dimen/_12ssp"
                android:textColor="#000000"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>